--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,1 @@
-<!doctype html>
-<html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>memory-game</title>
-        <script defer="defer" src="bundle.75249e82db979f40e907.js"></script>
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width"/><meta http-equiv="X-UA-Compatible" content="ie=edge"/><title>memory-game</title><script defer="defer" src="bundle.82395f768146fb9b2294.js"></script></head><body><div id="root"></div></body></html>
